# Phase-VII

./: .gitmodules  LICENSE.md  README.md  REAMDE.md
alpha_description/: package.xml
alpha_description/launch/: rviz_display.launch
alpha_description/meshes/chassis/: caster_L.stl
alpha_description/robots/: alpha_bot.urdf  alpha_bot.urdf.xacro
alpha_description/rviz/: urdf.rviz
alpha_description/urdf/chassis/: alpha_base.gazebo.xacro  alpha_base.urdf.xacro  alpha_transmission.xacro
alpha_gazebo/: CMakeLists.txt  package.xml
alpha_gazebo/worlds/: test_room.world
control_module/alpha_teleop/: CMakeLists.txt  package.xml
control_module/alpha_teleop/launch/: keyboard_teleop.launch
control_module/alpha_teleop/src/: keyboard_teleop.cpp
debug_module/alpha_dashboard/: CMakeLists.txt  package.xml
debug_module/alpha_dashboard/config/: alpha_rqt_config.perspective
debug_module/alpha_dashboard/launch/: rqt_alpha_console.launch
debug_module/alpha_dashboard/scripts/: rqt_alpha_console.py  rqt_alpha_console.sh
debug_module/alpha_master/: CMakeLists.txt  package.xml
debug_module/alpha_master/launch/real_world/: real_alpha_hector_slam.launch  real_alpha_rgbd_slam.launch
debug_module/alpha_master/launch/sim_world/: sim_alpha_slam.launch
debug_module/alpha_master/rviz/: slam_gmapping.rviz  slam_hector.rviz  slam_rgbd.rviz
hardware_module/hardware_arduino/: CMakeLists.txt  package.xml
hardware_module/hardware_arduino/firmware/: CMakeLists.txt
hardware_module/hardware_hokuyo/: CMakeLists.txt  README.md  package.xml
hardware_module/hardware_hokuyo/launch/: urg04lx.launch  urg04lx_rviz.launch
hardware_module/hardware_hokuyo/rviz/: hokuyo.rviz
hardware_module/hardware_kinect/: CMakeLists.txt  README.md  package.xml
hardware_module/hardware_kinect/launch/: kinect360.launch  kinect360_rviz.launch
hardware_module/hardware_kinect/rviz/: kinect.rviz
navigation_module/alpha_move_base/: CMakeLists.txt  package.xml
navigation_module/alpha_move_base/config/: dwa_local_planner_params.yaml
navigation_module/alpha_move_base/launch/: amcl_localization.launch  move_base.launch
navigation_module/alpha_move_base/launch/include/: amcl.launch.xml  move_base.launch.xml
navigation_module/alpha_move_base/maps/: garage.yaml
navigation_module/alpha_move_base/param/: base_local_planner_params.yaml  costmap_common_params.yaml
navigation_module/alpha_teleop/: package.xml
perception_module/alpha_scan_filter/: CMakeLists.txt  package.xml
perception_module/alpha_scan_filter/launch/: raw_scan_filter.launch
perception_module/alpha_scan_filter/src/: raw_scan_filter.cpp
perception_module/alpha_slam/: CMakeLists.txt  package.xml
perception_module/alpha_slam/launch/: slam_gmapping.launch  slam_hector.launch  slam_rgbd.launch
perception_module/raw_scan_filter/: CMakeLists.txt  package.xml
perception_module/raw_scan_filter/launch/: raw_scan_filter.launch
simulation_module/: README.md
simulation_module/alpha_description/: CMakeLists.txt  package.xml
simulation_module/alpha_description/launch/: create_urdf.launch  publish_tf.launch  rviz_display.launch
simulation_module/alpha_description/meshes/chassis/: caster_ball.STL  caster_body.STL  wheel.STL
simulation_module/alpha_description/robots/: alpha.gv  alpha_bot.urdf  alpha_bot.urdf.xacro
simulation_module/alpha_description/urdf/chassis/: alpha_base.gazebo.xacro  alpha_base.transmission.xacro  alpha_base.urdf.xacro
simulation_module/alpha_description/urdf/sensors/: kinect.urdf.xacro
simulation_module/alpha_description/urdf/sensors/hokuyo_laser/: hokuyo_lx30_laser.gazebo.xacro  hokuyo_lx30_laser.urdf.xacro
simulation_module/alpha_description/urdf/sensors/kinect/: kinect.urdf.xacro
simulation_module/alpha_description/urdf/sensors/kinect/v2/: kinect.gazebo.xacro  kinect.urdf.xacro
simulation_module/alpha_description/urdf/sensors/kinect/xbox360/: kinect.gazebo.xacro  kinect.urdf.xacro
simulation_module/alpha_gazebo/: CMakeLists.txt  package.xml
simulation_module/alpha_gazebo/launch/: alpha_empty_world.launch  alpha_room_world.launch  alpha_slam_gazebo.launch  amcl_demo.launch
simulation_module/alpha_gazebo/launch/include/: gazebo_alpha.launch.xml  rviz_alpha.launch.xml
simulation_module/alpha_gazebo/models/: alpha_bot.sdf  model.config
simulation_module/alpha_gazebo/models/alpha_robot/: alpha_bot.sdf
simulation_module/alpha_gazebo/rviz/: gazebo.rviz  slam_gmapping.rviz
simulation_module/alpha_gazebo/worlds/: test_room.sdf
