<?xml version="1.0"?>
<package>
  <name>alpha_dashboard</name>
  <version>0.0.1</version>
  <description>The rqt_alpha_dashboard package is to load various perspective config into rqt.</description>

  <maintainer email="mayankm@iitk.ac.in">Mayank Mittal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
