cmake_minimum_required(VERSION 2.8.3)
project(alpha_move_base)

find_package(catkin REQUIRED)

## System dependencies are found with CMake's conventions
# find_package(Boost REQUIRED COMPONENTS system)

###################################
## catkin specific configuration ##
###################################

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES alpha_move_base
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

