<?xml version="1.0"?>
<package>
  <name>alpha_description</name>
  <version>0.1.0</version>
  <description>The alpha_description package provides the required urdf files of the chassis and sensors mounted on the robot designed in the Phase-VII of the project.</description>

  <maintainer email="mayankm.iitk@gmail.com">Mayank Mittal</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
