<?xml version="1.0"?>
<package>
  <name>alpha_gazebo</name>
  <version>0.1.0</version>
  <description>The alpha_gazebo package contains required model and launch files to simulate robot alpha in gazebo.</description>

  <maintainer email="mayankm.iitk@gmail.com">Mayank Mittal</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>

</package>
